testcase/8944f1f8-08d5-45ad-a16f-b89f9d27b72e/logs/test_execution.log
=== PYTEST EXECUTION LOG ===

Exit Code: 1

STDOUT:
============================= test session starts =============================
platform win32 -- Python 3.13.4, pytest-9.0.3, pluggy-1.6.0 -- C:\Users\nandevi\AppData\Local\Temp\test_venv_exec_fm2byryg\venv\Scripts\python.exe
cachedir: .pytest_cache
metadata: {'Python': '3.13.4', 'Platform': 'Windows-11-10.0.22631-SP0', 'Packages': {'pytest': '9.0.3', 'pluggy': '1.6.0'}, 'Plugins': {'anyio': '4.13.0', 'asyncio': '1.3.0', 'json-report': '1.5.0', 'metadata': '3.1.1'}}
rootdir: C:\Users\nandevi\AppData\Local\Temp\test_venv_exec_fm2byryg
configfile: pytest.ini
plugins: anyio-4.13.0, asyncio-1.3.0, json-report-1.5.0, metadata-3.1.1
asyncio: mode=Mode.AUTO, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 0 items / 1 error

=================================== ERRORS ====================================
_______________________ ERROR collecting test_agent.py ________________________
venv\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
c:\python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
venv\Lib\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
test_agent.py:20: in <module>
    from agent import AuditLogger
E     File "C:\Users\nandevi\AppData\Local\Temp\test_venv_exec_fm2byryg\agent.py", line 4
E       from __future__ import annotations
E       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   SyntaxError: from __future__ imports must occur at the beginning of the file
--------------------------------- JSON report ---------------------------------
report saved to: C:\Users\nandevi\AppData\Local\Temp\test_venv_exec_fm2byryg\pytest_report.json
=========================== short test summary info ===========================
ERROR test_agent.py
============================== 1 error in 0.21s ===============================


STDERR:
